UI fix for mobile - removes whitespace on splash page for mobile by giving greeting-container height 100% min 800px - removes overflow-scroll from classes list so classes-list extends the whole screen on mobile

--- a/app/assets/stylesheets/_greeting.scss
+++ b/app/assets/stylesheets/_greeting.scss
@@ -12,6 +12,8 @@ body {
 #greeting-container {
   background-color: #1C2F5A;
   text-align: center;
+  height: 100%;
+  min-height: 800px;
 
   section {
     text-align: center;
