--- a/app/assets/stylesheets/customer/_gym.scss
+++ b/app/assets/stylesheets/customer/_gym.scss
@@ -4,7 +4,6 @@
   width: 100%;
   min-width: 300px;
   max-height: 425px;
-  overflow: scroll;
 
   .class-info:first-child {
     margin-top: 0px;
